Final report. For real.

--- a/first_part/report/report.tex
+++ b/first_part/report/report.tex
@@ -202,7 +202,7 @@
 	
 	\begin{figure}[h!]
 		\centering
-		\animategraphics[height=0.8\linewidth, autoplay]{12}{images/gif/heap3d-}{0}{121}
+		\animategraphics[height=0.8\linewidth, autoplay, loop]{12}{images/gif/heap3d-}{0}{121}
   		\caption{Tempo di esecuzione di HeapSelect per $n$ e $k$ variabili}
   		\label{fig:graph5}
 	\end{figure}
